--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -2198,6 +2198,7 @@ body.layout-boxed{
 /* ==============================
    3. Blog
    ============================== */
+div.post-item,
 article.post-item {
     margin-bottom: 50px;
 }
