--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -2287,9 +2287,14 @@ article.post-item {
 .blog-posts-image .format-video .entry-thumb:before,
 .blog-posts-image .format-audio .entry-thumb:before,
 .blog-posts-image .format-gallery .entry-thumb:before {
-  font-family: 'ElegantIcons';
+  font-family: "FontAwesome";
+  content: "";
+  speak: none;
   font-weight: normal;
-  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+  text-decoration: none;
   background: rgba(255, 255, 255, 0.4);
   width: 60px;
   height: 60px;
@@ -2301,7 +2306,6 @@ article.post-item {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
-  content: "\e005";
   position: absolute;
   -webkit-transform: translate(-50%, -50%);
   -khtml-transform: translate(-50%, -50%);
@@ -2318,19 +2322,35 @@ article.post-item {
   -moz-transition: all 0.2s ease-in-out 0s;
   -ms-transition: all 0.2s ease-in-out 0s;
   -o-transition: all 0.2s ease-in-out 0s;
-  transition: all 0.2s ease-in-out 0s; }
+  transition: all 0.2s ease-in-out 0s;
+  filter: alpha(opacity=0);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  -webkit-opacity: 0;
+  -khtml-opacity: 0;
+  -moz-opacity: 0;
+  -ms-opacity: 0;
+  -o-opacity: 0;
+  opacity: 0; }
 .blog-posts-image .format-quote .entry-thumb:before {
-  content: "\7b";
-  font-size: 38px; }
+  content: "\f10d"; }
 .blog-posts-image .format-link .entry-thumb:before {
-  content: "\e02b"; }
+  content: "\f0c1"; }
 .blog-posts-image .format-audio .entry-thumb:before {
-  content: "\e08e"; }
+  content: "\f001"; }
 .blog-posts-image .format-video .entry-thumb:before {
-  content: "\45";
-  font-size: 38px; }
+  content: "\f03d"; }
 .blog-posts-image .format-gallery .entry-thumb:before {
-  content: "\e006"; }
+  content: "\f083"; }
+
+.blog-posts-image .post-item:hover.format-quote .entry-thumb:before, .blog-posts-image .post-item:hover.format-link .entry-thumb:before, .blog-posts-image .post-item:hover.format-image .entry-thumb:before, .blog-posts-image .post-item:hover.format-video .entry-thumb:before, .blog-posts-image .post-item:hover.format-audio .entry-thumb:before, .blog-posts-image .post-item:hover.format-gallery .entry-thumb:before {
+  filter: alpha(opacity=100);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  -webkit-opacity: 1;
+  -khtml-opacity: 1;
+  -moz-opacity: 1;
+  -ms-opacity: 1;
+  -o-opacity: 1;
+  opacity: 1; }
 
 .blog-posts-image .entry-thumb img {
   width: 100%; }
