--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -4254,6 +4254,7 @@ form.wpcf7-form{
       padding-left: 35px;
       position: relative;
       list-style: none !important;
+      word-break: break-all;
       i{
         display: inline-block;
         left: 3px;
