--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -67,7 +67,6 @@ p {
 .row.no-gutters {
   margin-right: 0;
   margin-left: 0;
-
   & > [class^="col-"],
   & > [class*=" col-"] {
     padding-right: 0;
@@ -99,12 +98,6 @@ p {
   overflow: hidden;
   position: absolute !important;
   width: 1px;
-}
-
-.kt-column-bg{
-  @include css3-prefix('background-size', 'cover');
-  background-position: center center;
-  background-repeat: no-repeat;
 }
 
 .letter-spacing{  letter-spacing: 0.2em; }
@@ -472,10 +465,10 @@ select:not([multiple]) {
 
 
 /* ==============================
-   10. Header
+   6. Header
    ============================== */
 /*
- * 10.1 Header common styles
+ * 6.1 Header common styles
  */
 #site-title,
 #site-description{
@@ -485,7 +478,6 @@ select:not([multiple]) {
   position: relative;
   z-index: 200;
 }
-
 
 .site-branding{
   text-align: center;
@@ -935,10 +927,6 @@ select:not([multiple]) {
 }
 
 
-
-
-
-
 .nav-container{
   position: relative;
   .nav-main{
@@ -991,7 +979,7 @@ select:not([multiple]) {
 }
 
 /*
- * 10.2. Header layout version
+ * 6.2. Header layout version
  */
 .header-layout2 {
   .site-branding{
@@ -1030,7 +1018,7 @@ select:not([multiple]) {
 
 
 /*
- * 10.3. Header sticky
+ * 6.3. Header sticky
  */
 
 
@@ -1090,7 +1078,7 @@ select:not([multiple]) {
 
 
 /*
- * 10.4. Header mobile
+ * 6.4. Header mobile
  */
 
 #header-content-mobile{
@@ -1339,7 +1327,7 @@ body.opened-nav-animate{
 }
 
 /* ==============================
-   10. Footer
+   7. Footer
    ============================== */
 #footer{
   background: $nav-bg;
@@ -1491,7 +1479,7 @@ body.layout-boxed{
 }
 
 /* ==============================
-   2. KT Owl Carousel
+   8. KT Owl Carousel
    ============================== */
 .owl-carousel-kt{
   .owl-buttons{
@@ -1753,7 +1741,7 @@ body.layout-boxed{
 }
 
 /* ==============================
-   2. Rev slider custom
+   9. Rev slider custom
    ============================== */
 .uranus.tparrows{
   width: 40px;
@@ -1804,7 +1792,7 @@ body.layout-boxed{
 
 
 /* ==============================
-   2. Widgets
+   10. Widgets
    ============================== */
 .widget,
 .widget-container {
@@ -2246,7 +2234,7 @@ body.layout-boxed{
 }
 
 /* ==============================
-   3. Blog
+   11. Blog
    ============================== */
 div.post-item,
 article.post-item {
@@ -2502,12 +2490,8 @@ article.post-item {
     a{
       margin-right: 10px;
       &:before{
-        -webkit-font-smoothing: antialiased;
         display: inline-block;
-        font-family: "Simple-Line-Icons";
-        text-decoration: inherit;
-        vertical-align: text-bottom;
-        content: "\e05f";
+        @include FontAwesome('\f040');
         margin-right: 5px;
       }
     }
@@ -2918,21 +2902,20 @@ article.post-item.post-layout-classic {
 }
 
 /* ==============================
-   4. Breadcrumb
+   12. Breadcrumb
    ============================== */
 
 .woocommerce-breadcrumb,
 .breadcrumbs{
   .navigation-pipe:after{
-    content: "\f111";
-    font-family:FontAwesome;
+    @include FontAwesome('\f111');
     font-size:6px;
     padding: 0 15px;
     vertical-align: middle;
   }
 }
 /* ==============================
-   5. Page Header
+   13. Page Header
    ============================== */
 .page-header {
   margin: 0;
@@ -3010,11 +2993,11 @@ article.post-item.post-layout-classic {
     }
 }
 /* ==============================
-   5. Shortcodes
+   14. Shortcodes
    ============================== */
 
 /**
-* 5.1. Single image
+* 14.1. Single image
 **/
 
 .wpb_single_image{
@@ -3388,8 +3371,7 @@ article.post-item.post-layout-classic {
   display: none;
 
   &:after{
-    font-family: FontAwesome;
-    content: "\f005 \f005 \f005 \f005 \f005";
+    @include FontAwesome('\f005 \f005 \f005 \f005 \f005');
     font-size: 12px;
     color: $gray;
   }
@@ -3401,7 +3383,7 @@ article.post-item.post-layout-classic {
     height: 100%;
     line-height: 16px;
     &:after{
-      font-family: FontAwesome;
+      @include FontAwesome('');
       font-size: 12px;
       color: $primary-color;
     }
@@ -3582,7 +3564,7 @@ article.post-item.post-layout-classic {
 }
 
 /* ==============================
-   10. Composer
+   15. Composer
    ============================== */
 /**
 * 5.1. KT Heading
@@ -4396,7 +4378,7 @@ form.wpcf7-form{
 
 
 /* ==============================
-   11. Page Content
+   16. Page Content
    ============================== */
 /**
 * 11.2. Page 404
